SLX: fix footer

--- a/themes/hugo-hero-theme/layouts/partials/footer.html
+++ b/themes/hugo-hero-theme/layouts/partials/footer.html
@@ -15,7 +15,7 @@
       <div class="col-12">
       <div class="footer-inner">
       <ul>
-      <li class="text"> This International Research Network is supported by IRD (Institut de Recherche pour le Developpement, France).</li>
+      <li class="text"> IRN-CARDAPIO is supported by IRD (Institut de Recherche pour le Developpement, France).</li>
           </ul>
       </div>
       </div>
