SLX: add people

--- a/themes/hugo-hero-theme/assets/scss/pages/team/_team-summary.scss
+++ b/themes/hugo-hero-theme/assets/scss/pages/team/_team-summary.scss
@@ -1,3 +1,9 @@
+.institution-heading {
+  text-align: center;
+  color: #0a4c89;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
 .team-summary {
   display: flex;
   flex-wrap: wrap;
